--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background: linear-gradient(180deg, #3d88df 0%, #e7e7e7 100%);
+    margin: 0;
+    min-height: 100vh;
+
+}
